--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "projetodesenvolvimentoemnuvem2",
+  "name": "projetoNode",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EstenioGabriel/projetoDesenvolvimentoEmNuvem2.git"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/EstenioGabriel/projetoDesenvolvimentoEmNuvem2/issues"
-  },
-  "homepage": "https://github.com/EstenioGabriel/projetoDesenvolvimentoEmNuvem2#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.0.1"
   }
 }
